Enhance IcePrison logic and refactor formatting cleanup.
Updated `hasActivePrison` to check for MAGE role before detecting active prisons. Improved code formatting, fixed inconsistencies in method spacing, and enhanced logic in `onPlayerDeath` for better readability and sound/particle handling.